--- a/views/user/signin.html
+++ b/views/user/signin.html
@@ -1,3 +1,31 @@
 <%- include ../include/header.html %>
-登录
+<div class="row">
+    <div class="col-sm-6 col-sm-offset-3">
+        <form method="post" role="form" class="form-horizontal">
+            <div class="form-group">
+                <label for="username" class="col-sm-2 control-label">用户名：</label>
+                <div class="col-sm-10 input-group">
+                    <div class="input-group-addon">
+                        <span class="glyphicon glyphicon-user"></span>
+                    </div>
+                    <input id="username" type="text" class="form-control" name="username"/>
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="password" class="col-sm-2 control-label">密码：</label>
+                <div class="col-sm-10 input-group">
+                    <div class="input-group-addon">
+                        <span class="glyphicon glyphicon-lock"></span>
+                    </div>
+                    <input id="password" type="password" class="form-control" name="password"/>
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="col-sm-10 col-sm-offset-2">
+                    <button type="submit" class="btn btn-primary">提交</button>
+                </div>
+            </div>
+        </form>
+    </div>
+</div>
 <%- include ../include/footer.html %>
