--- a/views/user/signup.html
+++ b/views/user/signup.html
@@ -1,3 +1,40 @@
 <% include ../include/header.html %>
-注册
+<div class="row">
+    <div class="col-sm-6 col-sm-offset-3">
+        <form method="post" role="form" class="form-horizontal">
+            <div class="form-group">
+                <label for="username" class="control-label col-sm-2">用户名：</label>
+                <div class="col-sm-10 input-group">
+                    <div class="input-group-addon">
+                        <span class="glyphicon glyphicon-user"></span>
+                    </div>
+                    <input id="username" class="form-control" type="text" name="username" required/>
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="password" class="control-label col-sm-2">密码:</label>
+                <div class="col-sm-10 input-group">
+                    <div class="input-group-addon">
+                        <span class="glyphicon glyphicon-lock"></span>
+                    </div>
+                    <input id="password" type="password" class="form-control" name="password" required/>
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="email" class="control-label col-sm-2">邮箱:</label>
+                <div class="col-sm-10 input-group">
+                    <div class="input-group-addon">
+                        <span class="glyphicon glyphicon-envelope"></span>
+                    </div>
+                    <input id="email" type="email" class="form-control" name="email" required/>
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="col-sm-10 col-sm-offset-2">
+                    <button type="submit" class="btn btn-primary">提交</button>
+                </div>
+            </div>
+        </form>
+    </div>
+</div>
 <% include ../include/footer.html %>
