--- a/views/include/header.html
+++ b/views/include/header.html
@@ -26,3 +26,9 @@
     </div>
 </nav>
 <div class="container">
+    <% if(success){%>
+    <div class="alert alert-success"><%=success%></div>
+    <%}%>
+    <% if(error){%>
+    <div class="alert alert-danger"><%=error%></div>
+    <%}%>
