--- a/views/user/signup.html
+++ b/views/user/signup.html
@@ -1,7 +1,7 @@
 <% include ../include/header.html %>
 <div class="row">
     <div class="col-sm-6 col-sm-offset-3">
-        <form method="post" role="form" class="form-horizontal">
+        <form method="post" role="form" class="form-horizontal" enctype="multipart/form-data">
             <div class="form-group">
                 <label for="username" class="control-label col-sm-2">用户名：</label>
                 <div class="col-sm-10 input-group">
@@ -27,6 +27,15 @@
                         <span class="glyphicon glyphicon-envelope"></span>
                     </div>
                     <input id="email" type="email" class="form-control" name="email" required/>
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="avatar" class="control-label col-sm-2">头像:</label>
+                <div class="col-sm-10 input-group">
+                    <div class="input-group-addon">
+                        <span class="glyphicon glyphicon-cloud-upload"></span>
+                    </div>
+                    <input id="avatar" type="file" class="form-control" name="avatar" required/>
                 </div>
             </div>
             <div class="form-group">
